--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,8 +1,20 @@
 env:
   browser: true
   es2021: true
-extends: google
+extends: eslint:recommended
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {}
+rules:
+  indent:
+    - error
+    - 4
+  linebreak-style:
+    - error
+    - unix
+  quotes:
+    - error
+    - double
+  semi:
+    - error
+    - always
