--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "config.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,18 +17,18 @@
     "url": "https://github.com/stephenreynolds/ags-config/issues"
   },
   "homepage": "https://github.com/stephenreynolds/ags-config#readme",
+  "type": "module",
   "devDependencies": {
-    "eslint": "^8.54.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
     "@girs/dbusmenugtk3-0.4": "^0.4.0-3.2.0",
     "@girs/gobject-2.0": "^2.76.1-3.2.3",
     "@girs/gtk-3.0": "^3.24.39-3.2.2",
     "@girs/gvc-1.0": "^1.0.0-3.1.0",
     "@girs/nm-1.0": "^1.43.1-3.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0"
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-functional": "^6.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsdoc": "^46.9.0"
   }
 }
